# nvml_test

./: CMakeLists.txt  local_nvml.cpp  machine_manager.cpp  machine_manager.hpp  main.cpp  nvml_test.cpp  pal.cpp  pal.hpp  processor.cpp  processor.hpp  result_or.hpp  run.sh  topology_node.cpp  topology_node.hpp
